fix: revert input color to original value in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -64,7 +64,7 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
     --border: 240, 5%, 26%;
-    --input: 220 13% 91%;
+    --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
